gccida/g1/record_one_conflict
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_conflict/src/global.c:1826:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)v8].hard_reg_conflicts |= hard_regs_live; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_conflict/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_conflict/src/global.c:1847:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v3 = allocno_0; 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_conflict/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/record_one_conflict/src/obj/global.o] Error 1
